--- a/src/main/resources/themes/default/style.css
+++ b/src/main/resources/themes/default/style.css
@@ -1,26 +1,19 @@
 .root {
   /* Primary color is mainly used as background color. */
   -primary-color: #424242;
-
   /* Secondary color is mainly used as a slight contrast to primary color, e.g. odd/even in chat window */
   -secondary-color: #616161;
-
   /* Accent color is mainly used to emphazise actions, like buttons, links, checkboxes etc. It should be a very different
   color (e.g. complementary) to the primary color. */
   -accent-color: #8BC34A;
-
   /* Inverse of primary color. */
   -primary-color-inverse: #E0E0E0;
-
   /* Inverse of secondary color. */
   -secondary-color-inverse: #BDBDBD;
-
   /* Text color primary is used for normal text with primary color as background. */
   -primary-text-color: #F5F5F5;
-
   /* Text color secondary is used as a slight contrast to primary text color */
   -secondary-text-color: #E0E0E0;
-
   /* Inverse of text color primary*/
   -primary-text-color-inverse: #212121;
 
@@ -84,14 +77,14 @@
 /* TEXT FIELD & TEXT AREA */
 
 .text-area, .text-field {
-  -fx-background: -secondary-color;
+  -fx-background-color: -secondary-color;
   -fx-prompt-text-fill: -primary-text-color;
   -fx-highlight-fill: -accent-color;
 }
 
 
 .tab-header-background {
-  -fx-background: -secondary-color;
+  -fx-background-color: -secondary-color;
 }
 
 .tab:selected {
@@ -100,18 +93,24 @@
 }
 
 .tab {
-  -fx-background-color: -primary-text-color-inverse;
+  -fx-background-color: -secondary-color;
+}
+
+.tab:selected {
+  -fx-background-color: -primary-color;
 }
 
 .tab .tab-label {
   -fx-alignment: center;
   -fx-font-size: 14px;
-  -fx-font-weight: bold;
+  -fx-text-fill: -secondary-text-color;
+  -fx-background-color: -secondary-color;
 }
 
 .tab:selected .tab-label {
   -fx-text-fill: -accent-color;
   -fx-background-color: -primary-color;
+  -fx-font-weight: bold;
 }
 
 .progress-indicator:indeterminate *.segment {
@@ -120,6 +119,64 @@
 
 /* CHAT */
 
+.window-button {
+	-fx-min-height: 20px;
+	-fx-max-height: 20px;
+	-fx-margin: 0;
+	-fx-padding: 0;
+}
+
+.window-button:focus {
+  -fx-border: none;
+}
+
+#minimizeButton {
+	-fx-background-image: url('images/minimize.png');
+	-fx-min-width: 28px;
+	-fx-max-width: 28px;
+}
+#minimizeButton:hover {
+	-fx-background-image: url('images/minimize_over.png');
+}
+#minimizeButton:pressed {
+	-fx-background-image: url('images/minimize_pressed.png');
+}
+
+#maximizeButton {
+	-fx-background-image: url('images/maximize.png');
+	-fx-min-width: 27px;
+	-fx-max-width: 27px;
+}
+#maximizeButton:hover {
+	-fx-background-image: url('images/maximize_over.png');
+}
+#maximizeButton:pressed {
+	-fx-background-image: url('images/maximize_pressed.png');
+}
+
+#restoreButton {
+	-fx-background-image: url('images/restore.png');
+	-fx-min-width: 27px;
+	-fx-max-width: 27px;
+}
+#restoreButton:hover {
+	-fx-background-image: url('images/restore_over.png');
+}
+#restoreButton:pressed {
+	-fx-background-image: url('images/restore_pressed.png');
+}
+
+#closeButton {
+	-fx-background-image: url('images/close.png');
+	-fx-min-width: 48px;
+	-fx-max-width: 48px;
+}
+#closeButton:hover {
+	-fx-background-image: url('images/close_over.png');
+}
+#closeButton:pressed {
+	-fx-background-image: url('images/close_pressed.png');
+}
 
 
 /* CHAT CONTAINER */
@@ -128,7 +185,7 @@ html, body {
   margin: 0;
   padding: 0;
   background-color: #424242;
-  color: #BDBDBD;
+  color: #F5F5F5;
 }
 
 a {
