--- a/src/main/resources/themes/default/style.css
+++ b/src/main/resources/themes/default/style.css
@@ -31,6 +31,38 @@
   -fx-text-fill: -primary-text-color;
 }
 
+.ladder-button {
+  -fx-min-width: 100px;
+  -fx-max-width: 100px;
+  -fx-min-height: 100px;
+  -fx-max-height: 100px;
+}
+
+.ladder-button>*.radio {
+  -fx-min-width: 50px;
+  -fx-max-width: 50px;
+  -fx-min-height: 50px;
+  -fx-max-height: 50px;
+  -fx-background-color: transparent;
+  -fx-background-repeat: no-repeat;
+}
+
+#ladderButtonAeon>*.radio {
+  -fx-background-image: url('images/aeon.png');
+}
+#ladderButtonUef>*.radio {
+  -fx-background-image: url('images/uef.png');
+}
+#ladderButtonCybran>*.radio {
+  -fx-background-image: url('images/cybran.png');
+}
+#ladderButtonSeraphim>*.radio {
+  -fx-background-image: url('images/seraphim.png');
+}
+#ladderButtonRandom>*.radio {
+  -fx-background-image: url('images/random.png');
+}
+
 .login {
   -fx-font-size: 16px;
 }
@@ -120,10 +152,10 @@
 /* CHAT */
 
 .window-button {
-	-fx-min-height: 20px;
-	-fx-max-height: 20px;
-	-fx-margin: 0;
-	-fx-padding: 0;
+  -fx-min-height: 20px;
+  -fx-max-height: 20px;
+  -fx-margin: 0;
+  -fx-padding: 0;
 }
 
 .window-button:focus {
@@ -131,51 +163,51 @@
 }
 
 #minimizeButton {
-	-fx-background-image: url('images/minimize.png');
-	-fx-min-width: 28px;
-	-fx-max-width: 28px;
+  -fx-background-image: url('images/minimize.png');
+  -fx-min-width: 28px;
+  -fx-max-width: 28px;
 }
 #minimizeButton:hover {
-	-fx-background-image: url('images/minimize_over.png');
+  -fx-background-image: url('images/minimize_over.png');
 }
 #minimizeButton:pressed {
-	-fx-background-image: url('images/minimize_pressed.png');
+  -fx-background-image: url('images/minimize_pressed.png');
 }
 
 #maximizeButton {
-	-fx-background-image: url('images/maximize.png');
-	-fx-min-width: 27px;
-	-fx-max-width: 27px;
+  -fx-background-image: url('images/maximize.png');
+  -fx-min-width: 27px;
+  -fx-max-width: 27px;
 }
 #maximizeButton:hover {
-	-fx-background-image: url('images/maximize_over.png');
+  -fx-background-image: url('images/maximize_over.png');
 }
 #maximizeButton:pressed {
-	-fx-background-image: url('images/maximize_pressed.png');
+  -fx-background-image: url('images/maximize_pressed.png');
 }
 
 #restoreButton {
-	-fx-background-image: url('images/restore.png');
-	-fx-min-width: 27px;
-	-fx-max-width: 27px;
+  -fx-background-image: url('images/restore.png');
+  -fx-min-width: 27px;
+  -fx-max-width: 27px;
 }
 #restoreButton:hover {
-	-fx-background-image: url('images/restore_over.png');
+  -fx-background-image: url('images/restore_over.png');
 }
 #restoreButton:pressed {
-	-fx-background-image: url('images/restore_pressed.png');
+  -fx-background-image: url('images/restore_pressed.png');
 }
 
 #closeButton {
-	-fx-background-image: url('images/close.png');
-	-fx-min-width: 48px;
-	-fx-max-width: 48px;
+  -fx-background-image: url('images/close.png');
+  -fx-min-width: 48px;
+  -fx-max-width: 48px;
 }
 #closeButton:hover {
-	-fx-background-image: url('images/close_over.png');
+  -fx-background-image: url('images/close_over.png');
 }
 #closeButton:pressed {
-	-fx-background-image: url('images/close_pressed.png');
+  -fx-background-image: url('images/close_pressed.png');
 }
 
 
