--- a/src/main/resources/themes/default/whats_new.fxml
+++ b/src/main/resources/themes/default/whats_new.fxml
@@ -2,7 +2,6 @@
 
 
 <?import javafx.scene.web.WebView?>
-<WebView prefHeight="200.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/8.0.40"
-         xmlns:fx="http://javafx.com/fxml/1"
-         fx:id="whatsNewRoot"
+<WebView fx:id="whatsNewRoot" minHeight="-1.0" minWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0"
+         xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1"
          fx:controller="com.faforever.client.whatsnew.WhatsNewController"/>
