--- a/src/main/resources/themes/default/games.fxml
+++ b/src/main/resources/themes/default/games.fxml
@@ -1,12 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1">
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" stylesheets="@style.css"
+      xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.faforever.client.games.GamesController">
    <children>
-      <GridPane>
+     <GridPane disable="true" maxHeight="1.7976931348623157E308">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" />
             <ColumnConstraints hgrow="SOMETIMES" />
@@ -31,5 +42,26 @@
             <Label text="%games.ladder.description" GridPane.rowIndex="1" />
          </children>
       </GridPane>
+     <HBox alignment="CENTER_RIGHT" maxHeight="1.7976931348623157E308">
+       <children>
+         <Button mnemonicParsing="false" text="%games.create"/>
+       </children>
+       <padding>
+         <Insets bottom="10.0" top="10.0"/>
+       </padding>
+     </HBox>
+     <TableView fx:id="gamesList" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+                VBox.vgrow="ALWAYS">
+       <columns>
+         <TableColumn prefWidth="75.0"/>
+         <TableColumn prefWidth="75.0" text="%game.title" fx:id="gameTitleColumn"/>
+         <TableColumn prefWidth="75.0" text="%game.players" fx:id="playersColumn"/>
+         <TableColumn prefWidth="75.0" text="%game.map" fx:id="mapNameColumn"/>
+         <TableColumn prefWidth="75.0" text="%game.ranking" fx:id="rankingColumn"/>
+       </columns>
+       <columnResizePolicy>
+         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+       </columnResizePolicy>
+     </TableView>
    </children>
 </VBox>
