--- a/src/main/resources/themes/default/login.fxml
+++ b/src/main/resources/themes/default/login.fxml
@@ -11,34 +11,36 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
-<VBox fx:id="loginRoot" prefWidth="400.0" styleClass="login" stylesheets="@style.css"
+<VBox fx:id="loginRoot" alignment="TOP_CENTER" prefWidth="400.0" styleClass="login" stylesheets="@style.css"
+      AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0"
       xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="com.faforever.client.login.LoginController">
   <children>
-    <HBox alignment="TOP_RIGHT">
-      <children>
-        <Button mnemonicParsing="false" onAction="#onCloseButtonClicked" prefWidth="25.0"/>
-      </children>
-    </HBox>
+    <ImageView fitHeight="160.0" fitWidth="160.0" pickOnBounds="true" preserveRatio="true">
+      <image>
+        <Image url="@../../images/logo_transparent.png"/>
+      </image>
+      <VBox.margin>
+        <Insets bottom="20.0" top="30.0"/>
+      </VBox.margin>
+    </ImageView>
     <AnchorPane>
       <children>
         <VBox fx:id="loginProgressPane" alignment="CENTER" layoutY="104.0" AnchorPane.bottomAnchor="0.0"
               AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
           <children>
-            <ProgressIndicator VBox.vgrow="ALWAYS">
-              <VBox.margin>
-                <Insets bottom="40.0" left="80.0" right="80.0" top="80.0"/>
-              </VBox.margin>
-            </ProgressIndicator>
+            <ProgressIndicator prefHeight="80.0" prefWidth="80.0"/>
             <Label text="%login.progress.message">
               <VBox.margin>
-                <Insets/>
+                <Insets top="14.0"/>
               </VBox.margin>
             </Label>
+            <Pane VBox.vgrow="ALWAYS"/>
             <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="%login.button.cancel">
               <VBox.margin>
-                <Insets top="100.0"/>
+                <Insets top="20.0"/>
               </VBox.margin>
             </Button>
           </children>
@@ -46,14 +48,6 @@
         <VBox fx:id="loginFormPane" alignment="TOP_CENTER" layoutY="40.0" spacing="5.0" AnchorPane.bottomAnchor="0.0"
               AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
           <children>
-            <ImageView fitHeight="160.0" fitWidth="160.0" pickOnBounds="true" preserveRatio="true">
-              <image>
-                <Image url="@../../images/logo_transparent.png"/>
-              </image>
-              <VBox.margin>
-                <Insets bottom="20.0" top="10.0"/>
-              </VBox.margin>
-            </ImageView>
             <TextField fx:id="usernameInput" minWidth="100.0" promptText="%login.name"/>
             <PasswordField fx:id="passwordInput" minWidth="100.0" promptText="%login.password"/>
             <CheckBox fx:id="autoLoginCheckBox" alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308"
